upt: atualizando tratamento global de erros conforma task da aula 06
